--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "rollup": "2.58.3",
     "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-livereload": "2.0.5",
+    "@rollup/plugin-replace": "3.0.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "svelte": "3.44.0"
